Melhora o filtro de lomoize

--- a/thumbor.conf
+++ b/thumbor.conf
@@ -185,7 +185,8 @@ ALLOW_ORIGINAL_PHOTO_PUTTING = False
 ## it)
 ## Defaults to: []
 FILTERS = [
-    'custom_filters.lomoize'
+    'custom_filters.lomoize',
+    'custom_filters.drawing',
 ]
 
 ################################################################################
